Fixed --navigation z-index

--- a/src/Components/Nav/NavBar.scss
+++ b/src/Components/Nav/NavBar.scss
@@ -2,6 +2,7 @@
   width: 100%;
   justify-content: center;
   transition: 0.45s;
+  z-index: 10;
 }
 
 .scrolled {
